examples/test/testpolicy10215.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10215
  namespace: namespace194
spec:
  podSelector:
    matchLabels:
      key49: value6
      key24: value39
      key41: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value28
          key6: value1
          key23: value43
      podSelector:
        matchLabels:
          key24: value16
          key26: value45
          key43: value47
